Run OpenRewrite on all files to migrate to Java 17